k8s/deploys.yaml
# db deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo
        ports:
        - containerPort: 27017
        livenessProbe:
          exec:
            command:
            - mongo
            - --eval
            - "db.runCommand('ping').ok"
          initialDelaySeconds: 60
          periodSeconds: 60
---
# backend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/alextien40816291/backend:latest
        ports:
        - containerPort: 8888
        livenessProbe:
          httpGet:
            path: /
            port: 8888
          initialDelaySeconds: 60
          periodSeconds: 60
---
# frontend deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: ghcr.io/alextien40816291/frontend:latest
        ports:
        - containerPort: 5173
        livenessProbe:
          httpGet:
            path: /
            port: 5173
          initialDelaySeconds: 60
          periodSeconds: 60
