k8s/services.yaml
# db service
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
  type: ClusterIP
---
# backend service
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - port: 8888
    targetPort: 8888
  selector:
    app: backend
  type: ClusterIP
---
# frontend service
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - port: 5173
    targetPort: 5173
  selector:
    app: frontend
  type: ClusterIP
